Async API scan queue with worker draining (#67)
* async API scan queue with worker draining and backpressure

* Update internal/config/security.go


* Update internal/config/security.go


* Update internal/config/security.go


* Update internal/config/security.go


* Update internal/db/postgres_test.go


* fix queue retry signaling and memory store queue parity

* make repo duplicate guard case-insensitive across stores

---------
